--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,6 @@
 <main class="container">
   <div class="col-md-6 offset-md-3">
+    <%= turbo_stream_from "items" %>
     <div class="d-flex justify-content-between align-items-center my-4">
       <h1 class="h3">
         All items
